--- a/wp-content/themes/hello-elementor-child/package.json
+++ b/wp-content/themes/hello-elementor-child/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vuepic/vue-datepicker": "^12.0.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.1",
     "vite": "^7.2.2",
     "vue": "^3.5.24"
   }
